added 8 characters implementations (first draft).
The characters that are active for the whole turn go on wait() and will be notified by the game when the current player changes.