@@ -140,8 +140,7 @@ public class GameMap {
 //    return should be an island.
     public Island getIslandById(int islandId) {
         List<Island> islands = archipelago.stream()
-                .filter(i -> i.id == islandId)
-                .collect(Collectors.toList());
+                .filter(i -> i.id == islandId).toList();
         try {
             return islands.get(0);
         } catch (Exception e) {
@@ -164,7 +163,7 @@ public class GameMap {
 //        System.out.println("mother nature is now here: " + gc.getGame().getGameMap().motherNature);
 
         //TEST FOR DOJOINS() change the indices as you want
-        Game game = Game.makeGame(3,false);
+        Game game = Game.makeGame(3);
         game.getGameMap().archipelago.get(0).setOwner(game.getCurrentPlayer());
         game.getGameMap().archipelago.get(2).setOwner(game.getCurrentPlayer());
         game.getGameMap().archipelago.get(3).setOwner(game.getCurrentPlayer());
